--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "style-loader": "^0.19.1",
     "stylelint": "^8.4.0",
     "ts-jest": "^22.0.0",
+    "ts-node": "^4.1.0",
     "ts-node-dev": "^1.0.0-pre.5",
     "tslib": "^1.8.1",
     "tslint": "^5.5.0",
